@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-29T02:08:07Z",
-  "count" : 2,
+  "timestamp" : "2022-11-11T08:32:06Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "count_decinc" : [ -1, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
