@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-10T16:33:13Z",
+  "timestamp" : "2022-11-11T08:32:06Z",
   "count_outdated" : 878,
   "uniques_outdated" : 461,
-  "count" : 891,
+  "count" : 890,
   "uniques" : 468,
   "clones" : [
     {
       "timestamp": "2022-10-28T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
