@@ -1,10 +1,10 @@
 {
-  "count": 13,
+  "count": 12,
   "uniques": 2,
   "clones": [
     {
       "timestamp": "2022-10-28T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
