@@ -1,3 +1,11 @@
+2022-11-11T08:32:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3443606939 # 1022
+* notice: last 14d: unq all: 2 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 461 878 / 468 891
+* notice: next accum: outdated-unq outdated-all / unq all: 461 878 / 468 890
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-10-28]
+
 2022-11-10T16:33:13Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3438623235 # 1020
 * notice: last 14d: unq all: 2 13
